--- a/style.css
+++ b/style.css
@@ -16,13 +16,13 @@ body {
 
 .container {
     max-width: 100%;
-    padding: 0 20px;
+    padding: 0 30px;
     margin: 0 auto;
 }
 
 .navbar {
     background-color: #1F2937;
-    height: 60px;
+    height: 80px;
     color: white;
 }
 
@@ -51,11 +51,12 @@ ul {
 
 .navbar .nav {
     display: flex;
+    justify-content: flex-end;
     
 }
 
 .navbar li {
-    margin-right: 10px;
+    margin-left: 35px;
 }
 
 .navbar .container {
@@ -65,7 +66,81 @@ ul {
     height: 100%;
 }
 
+.header {
+    background-color: #1F2937;
+    color: white;
+    font-size: medium;
+    height: 450px;
+}
 
+.header img {
+    height: 300px;
+    width: 600px;
+    /*border: 1px solid white;*/
+}
 
+.header .header-text {
+    /*border: 1px solid white;*/
+    width: 50%;
+}
+
+.header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.sign-up-btn {
+    background-color: #3B82F6;
+    color: white;
+    font-size: 18px;
+    padding: 10px;
+    margin-top: 15px;
+    border: none;
+    border-radius: 5px;
+}
+
+.section {
+    background-color: white;
+    min-height: 300px;
+    display: flex;
+}
+
+.section .container {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+   
+   
+}
+
+.section img {
+    height: 200px;
+    width: 250px;
+    border-radius: 5px;
+}
+
+.section h2 {
+    margin-top: 20px;
+    font-size: 25px;
+}
+
+.boxes {
+    display: flex;
+    justify-content: space-evenly;
+    width: 80%;
+    flex-wrap: wrap;
+}
+
+.boxes p {
+    width: 250px;
+    font-size: 16px;
+    text-align: center;
+}
 
 
