--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ ul {
     color: white;
     font-size: medium;
     height: 450px;
+    margin-bottom: 20px;
 }
 
 .header img {
@@ -80,11 +81,11 @@ ul {
 }
 
 .header .header-text {
-    /*border: 1px solid white;*/
     width: 50%;
 }
 
 .header .container {
+    height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -135,11 +136,59 @@ ul {
     justify-content: space-evenly;
     width: 80%;
     flex-wrap: wrap;
+    margin-bottom: 20px;
 }
 
 .boxes p {
     width: 250px;
     font-size: 16px;
+    text-align: center;
+}
+
+.section-2 {
+    min-height: 300px;
+    display: flex;
+    align-items: center;
+    background-color: #E5E7EB;
+}
+
+.section-2 .container {
+    height: 100%;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.quote {
+    font-weight: 400;
+    font-size: x-large;
+    font-style: italic;
+   
+}
+
+.author {
+    font-weight: bold;
+    text-align: end;
+    font-size: medium;
+}
+
+.footer {
+    margin-top: 20px;
+    min-height: 200px;
+    background-color: #3B82F6;
+    color: white;
+    display: flex;
+    align-items: center;
+}
+
+.footer .container {
+    min-height: 100%;
+    width: 100%;
+}
+
+.footer p {
+    font-size: larger;
     text-align: center;
 }
 
